--- a/expensez_app/pubspec.yaml
+++ b/expensez_app/pubspec.yaml
@@ -66,7 +66,12 @@ flutter:
       fonts:
         - asset: assets/fonts/Opensans-Regular.ttf
         - asset: assets/fonts/OpenSans-Bold.ttf
-          style: italic
+          weight: 700
+    - family: QuickSand
+      fonts:
+        - asset: assets/fonts/Quicksand-Regular.ttf
+        - asset: assets/fonts/Quicksand-Bold.ttf
+          weight: 700 
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
